--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
 <html>
 
+<head>
+    <style>
 
+        body {
+            background-color: rgb(135, 161, 0);
+        }
+    </style>
+
+</head>
 Hi
+
+
+
 
 <br>
 <a href="secondPage.html">Second Page</a>
