--- a/Folder/index.html
+++ b/Folder/index.html
@@ -9,11 +9,16 @@
     </style>
 
 </head>
-Hi
+<body>
+
+    Hi
+
+</body>
+
 
 
 
 
 <br>
-<a href="secondPage.html">Second Page</a>
+<a href="folder/secondPage.html">Second Page</a>
 <html>
