--- a/index.html
+++ b/index.html
@@ -6,19 +6,23 @@
         body {
             background-color: rgb(135, 161, 0);
         }
+        #one {background-color:red;height:500px;
+        }
     </style>
 
 </head>
 <body>
 
     Hi
+    <br>
+    <a href="secondPage.html">Second Page</a>
 
+    div id="one">this is one</div>
 </body>
 
 
 
 
 
-<br>
-<a href="secondPage.html">Second Page</a>
+
 <html>
