--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <br>
     <a href="secondPage.html">Second Page</a>
 
-    div id="one">this is one</div>
+    <div id="one">this is one</div>
 </body>
 
 
