--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
         body {
             background-color: rgb(135, 161, 0);
         }
-        #one {background-color:red;height:500px;
+
+        #one {background-color:red;
+              height:500px;
         }
     </style>
 
