--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <style>
 
         body {
-            background-color: rgb(135, 161, 0);
+            background-color:white;
         }
 
         #one {background-color:red;
