--- a/index.html
+++ b/index.html
@@ -1,30 +1,13 @@
+<!DOCTYPE html>
 <html>
-
 <head>
-    <style>
-
-        body {
-            background-color:white;
-        }
-
-        #one {background-color:red;
-              height:500px;
-        }
-    </style>
-
+<title>Randomizer</title>
 </head>
 <body>
 
-    Hi
-    <br>
-    <a href="secondPage.html">Second Page</a>
+<h1>This is a Heading</h1>
+<p>This is a paragraph.</p>
 
-    <div id="one">this is one</div>
 </body>
-
-
-
-
-
-
-<html>
+</html>
+<script src="E\Art101\classsite\sketch.js"></script>
