--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <a href="randomizer-1/index.html">Randomizer 1</a>
     <a href="randomizer-2/index.html">Randomizer 2</a>
     <a href="randomizer-3/index.html">Randomizer 3</a>
+    <a href="randomizer-final/index.html">Randomizer final</a>
   </body>
 </html>
