--- a/randomizer-final/index.html
+++ b/randomizer-final/index.html
@@ -5,11 +5,23 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
-
+    <script src="sketch.js"></script>
+<link href="https://fonts.googleapis.com/css2?family=Fasthand&display=swap" rel="stylesheet">
   </head>
   <body>
+
+    <div class="row" id="canvasDiv">
+
+      <img src="cover.jpg" alt="cover" width="500" height="600">>
+
+
+
+      <button type="button" id="randButton">CLICK <br><br>TO <br><br>RANDOMIZER</button>
+
+
+</div>
+
     <main>
     </main>
-    <script src="sketch.js"></script>
   </body>
 </html>
